<resources>
    <string name="app_name">BandTracker</string>
    <string name="band_details_giglist_none">You have not been to any gigs yet.</string>
    <plurals name="band_details_giglist">
        <item quantity="one">You have been to one gig:</item>
        <item quantity="other">You have been to %1$d gigs:</item>
    </plurals>
    <string name="lblStartDate">Starts</string>
    <string name="lblStarTime"/>
    <string name="lblSupportAct">Support Act</string>
    <string name="lblRating">Rating</string>
    <string name="dummyStartDate">Mon 12th, May 2015</string>
    <string name="hintCountry">country</string>
    <string name="hintCity">city</string>
    <string name="hintVenue">venue</string>
    <string name="hintStage">stage</string>
    <string name="dummyStartTime">12h15</string>
    <string name="hintComments">comments</string>
    <string name="action_gig_edit">Edit</string>
    <string name="action_gig_save">Save</string>
    <string name="action_gig_delete">Delete</string>
    <string name="dummyBandName"><![CDATA[<Band Name>]]></string>
    <plurals name="band_list_numgigs">
        <item quantity="one">(1 gig)</item>
        <item quantity="other">(%1$d gigs)</item>
    </plurals>
    <string name="band_list_numgigs_none">(no gigs)</string>
    <string name="bandImageDescription">Band Picture</string>
    <string name="logoImageDescription">Band Logo</string>
    <string name="title_activity_gig_guided_creation">GigGuidedCreation</string>
    <string name="filter_country">Filter on country</string>
    <string name="filter_year">Filter on year:</string>
    <string name="button_manual_create">Manually create a gig</string>

    <string name="country_search_popular">Popular countries</string>

    <string name="page_bands">Bands</string>
    <string name="page_timeline">Timeline</string>
    <string name="dummyLocation"><![CDATA[<Location>]]></string>
    <string name="dummyYear"><![CDATA[<Year>]]></string>
    <plurals name="spinner_year_count">
        <item quantity="other">(%1$d tourdates)</item>
        <item quantity="one">(1 tourdate)</item>
    </plurals>
    <string name="dummy_spinner_year"><![CDATA[<year>]]></string>
    <string name="dummyName"><![CDATA[<name>]]></string>

    <string name="setlist_notfound">No set list available for the requested date.</string>
    <string name="setlist_courtesy">Set list courtesy of setlist.fm</string>
    <string name="setlist_website">(click here to view this setlist on the setlist.fm website)</string>
    <string name="setlist_title">Set List</string>
    <string name="gigdetails_view_setlist">View the setlist</string>
    <string name="gigdetails_search_youtube">Search for videos on YouTube</string>
    <string name="dummy_title"><![CDATA[<title>]]></string>
    <string name="setlist_youtube">(tap on a song to search for related videos on YouTube)</string>
    <string name="countryImageDescription">Flag of the country</string>
    <string name="dummy_band_name"><![CDATA[<Band Name>]]></string>
    <string name="youtubeThumbDescription">Youtube Thumbnail</string>
    <string name="band_details_header"><![CDATA[<header>]]></string>
    <string name="dummy_biography"><![CDATA[<biography>]]></string>
    <string name="header_results">Results</string>
    <string name="dummy_location"><![CDATA[<location>]]></string>
    <string name="dummy_date"><![CDATA[<date>]]></string>

</resources>
