<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="be.justcode.bandtracker.activity.GigSetlistActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        style="@style/ToolbarStyle"
        />

    <!-- header -->
    <RelativeLayout
        android:id="@+id/pnlHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyLocation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyStartDate"
            android:layout_below="@id/lblLocation"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setlist_youtube"
            android:layout_below="@+id/lblDate"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:scaleType="fitCenter"
                android:alpha="0.35"
                android:contentDescription="@string/logoImageDescription"/>
        </LinearLayout>

    </RelativeLayout>

    <!-- setlist -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listSetlist"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/pnlHeader"
        android:layout_above="@+id/pnlFooter"
        android:layout_margin="2dp"
        />

    <TextView
        android:id="@+id/lblSetlistNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setlist_notfound"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        />

    <!-- footer -->
    <RelativeLayout
        android:id="@+id/pnlFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:onClick="pnlFooter_clicked"
        >
        <TextView
            android:id="@+id/lblSetlistFm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setlist_courtesy"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setlist_website"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lblSetlistFm"
            />
    </RelativeLayout>

</RelativeLayout>
