<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblBandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummyBandName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummyLocation"
        android:layout_below="@+id/lblBandName"
        android:layout_alignStart="@+id/lblBandName"
        android:layout_marginStart="16dp"
        />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/pnlCountry"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgCountry"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:alpha="0.15"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_alignParentEnd="true"
        android:text="@string/dummyStartDate"
        android:layout_marginEnd="8dp"

        />

    <RatingBar
        android:id="@+id/ratingBar"
        style = "?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:layout_below="@+id/lblBandName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:progressTint="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:scaleType="fitCenter"
            android:alpha="0.2"
            android:contentDescription="@string/logoImageDescription"/>
    </LinearLayout>

</RelativeLayout>