<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="be.justcode.bandtracker.activity.GigGuidedCreation">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        style="@style/ToolbarStyle"
        />

    <TableLayout
        android:id="@+id/pnlFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:animateLayoutChanges="true"
        style="@style/TableLayoutSectioned"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/TableRowMinorOffset"
            >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
                >

                <TextView
                    android:id="@+id/lblYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_year"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    />

                <Spinner
                    android:id="@+id/pickYear"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_toEndOf="@+id/lblYear"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/TableRowMinorOffset"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/pnlImage"
                    android:inputType="text"
                    android:id="@+id/editCountry"
                    android:hint="@string/filter_country"
                    android:onClick="editText_clicked"
                    android:focusable="false"
                    />

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/pnlImage"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgCountry"
                        android:layout_margin="2dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/countryImageDescription"
                        />

                </LinearLayout>


            </RelativeLayout>

        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/header_results"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"/>

        </TableRow>

    </TableLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listTourDates"
        android:layout_below="@+id/pnlFilter"
        android:layout_above="@+id/btnManualCreate"
        />

    <Button
        android:id="@+id/btnManualCreate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_manual_create"
        android:layout_alignParentBottom="true"
        android:onClick="btnManualCreate_clicked"

        />

</RelativeLayout>

